<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#F4D4D4"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/profile"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="#8B4C4C"
                android:layout_marginBottom="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <FrameLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/profilePicture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/circle_background"
                    android:scaleType="centerCrop"
                    android:src="@drawable/sample_profile" />

                <ImageView
                    android:id="@+id/btnEditPicture"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="4dp"
                    android:background="@drawable/circle_background"
                    android:padding="6dp"
                    android:src="@drawable/ic_camera"
                    android:contentDescription="Edit Photo" />
            </FrameLayout>

            <EditText
                android:id="@+id/editName"
                android:hint="@string/full_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:padding="12dp"
                android:background="@drawable/rounded_edittext"
                android:textColor="#000000"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/editEmail"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:padding="12dp"
                android:background="@drawable/rounded_edittext"
                android:textColor="#000000"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/editBio"
                android:hint="@string/bio"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:padding="12dp"
                android:background="@drawable/rounded_edittext"
                android:textColor="#000000"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/phone"
                android:inputType="phone"
                android:padding="12dp"
                android:textColor="#000000"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnUpdate"
                android:text="@string/update"
                android:textColor="@color/white"
                android:layout_marginTop="46dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#4B2323"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
